Python basics covered.

--- a/Day5_0802.ipynb
+++ b/Day5_0802.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkT5idc8bGAtasEsrmPsi2",
+      "authorship_tag": "ABX9TyPZm6fms0xEeW62Z9dMIbxJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -869,6 +869,406 @@
           "execution_count": 75
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Harry Potter and the Goblet of fire\"\n",
+        "\n",
+        "#Find Length\n",
+        "print(len(a))  #including spaces.\n",
+        "\n",
+        "#Make capitalize first word of given string\n",
+        "print(a.capitalize())\n",
+        "\n",
+        "print(a.upper())  #upper case\n",
+        "print(a.lower())  #lower case\n",
+        "\n",
+        "print(a.casefold())  #first character of every word will be in lower case\n",
+        "print(a.index(\"o\"))  #Get index no. of given character.\n",
+        "print(a.index(\"o\", 10, 35))   #Get the index no. of given character in given range.\n",
+        "print(a.find(\"o\", 10, 35))    #exactly same as index function."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tICRjfjXJcvH",
+        "outputId": "e97d108a-822a-4724-b7e7-3b8042b6fbfd"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "35\n",
+            "Harry potter and the goblet of fire\n",
+            "HARRY POTTER AND THE GOBLET OF FIRE\n",
+            "harry potter and the goblet of fire\n",
+            "harry potter and the goblet of fire\n",
+            "7\n",
+            "22\n",
+            "22\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Amit\"\n",
+        "age = 28\n",
+        "b = \"My name is {}. and my age is {}.\"\n",
+        "print(b.format(name, age))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ic3waHEuM4KH",
+        "outputId": "5317e9f7-2f52-4d86-e366-58c597613b82"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My name is Amit. and my age is 28.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Slicing in String\n",
+        "\n",
+        "a = \"harry potter and prisoner of azkaban\"\n",
+        "print(a[0:5])\n",
+        "print(a[:5])\n",
+        "print(a[-7:])\n",
+        "print(a[:-7])\n",
+        "print(a[6:12])\n",
+        "print(a[: : -1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q-0iUj_IJl8g",
+        "outputId": "a53eac56-11c1-4b23-9550-d712c109a3a8"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "harry\n",
+            "harry\n",
+            "azkaban\n",
+            "harry potter and prisoner of \n",
+            "potter\n",
+            "nabakza fo renosirp dna rettop yrrah\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Slicing in String\n",
+        "\n",
+        "b = \"123456789\"\n",
+        "print(b[ : :2])\n",
+        "print(b[ : : ])\n",
+        "print(b[0:8:2])\n",
+        "print(b[: :-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vsqCvkYqjgFP",
+        "outputId": "0c607a72-153f-4dc7-ba9d-61f6d0ded6b2"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13579\n",
+            "123456789\n",
+            "1357\n",
+            "987654321\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Amit Udugade\"\n",
+        "\n",
+        "print(a.startswith(\"A\"))    #True\n",
+        "print(a.startswith(\"a\"))    #False - Case Sensitive\n",
+        "print(a.startswith(\"U\", 5, 12))\n",
+        "\n",
+        "print(a.endswith(\"e\"))\n",
+        "\n",
+        "print(a.swapcase())    #aMIT uDUGADE\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MwvElAKxkby5",
+        "outputId": "79635f96-72fe-4de6-b2d3-f123cf633c2c"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "aMIT uDUGADE\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = \"        Harry Potter                      \"\n",
+        "\n",
+        "print(c)\n",
+        "print(c.strip())   #Trim the spaces from both the sides.\n",
+        "\n",
+        "d = \"     @@  Amit udugade *********    \"\n",
+        "print(d)\n",
+        "print(d.strip(\"*, , @\"))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gZigkXpmllo2",
+        "outputId": "b202ec17-843f-4829-add3-06c7b8ff2c73"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        Harry Potter                      \n",
+            "Harry Potter\n",
+            "     @@  Amit udugade *********    \n",
+            "Amit udugade\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"Amit Java\"\n",
+        "\n",
+        "print(a.replace(\"Java\", \"Python\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NUH9Zwk6msZ5",
+        "outputId": "fa7eaa9b-39ed-4170-ba2c-5d1568750ca7"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Amit Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#ljust   - adds spaces to the left of the word including that word. the vice a versa rjust.\n",
+        "\n",
+        "a = \"Amit udugade\"\n",
+        "\n",
+        "print(a.ljust(20))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-2_yK2-_nk5M",
+        "outputId": "94291af7-21e3-4a82-9a73-9a8d780e05cb"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Amit udugade        \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "email = \"amit.udugade@outlook.com\"\n",
+        "\n",
+        "print(email.split(\"@\"))\n",
+        "print(email.split(\".\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bWcQbIAwn5fF",
+        "outputId": "c2e41940-9805-47f1-ba2e-ac9eddaa0b04"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['amit.udugade', 'outlook.com']\n",
+            "['amit', 'udugade@outlook', 'com']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"JayShreeRam#Ayodhya#Bharat#Blessed\"\n",
+        "\n",
+        "print(a.split(\"#\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eG5Mg62ooaG5",
+        "outputId": "2dac2f1d-a6b5-4d60-8ae5-35d0cd30bc0e"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['JayShreeRam', 'Ayodhya', 'Bharat', 'Blessed']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"1234.1\"\n",
+        "b = \"1234\"\n",
+        "c = \"Amit18\"\n",
+        "d = \" \"\n",
+        "\n",
+        "print(b.isalpha())\n",
+        "print(b.isdigit())\n",
+        "print(c.isalnum())\n",
+        "print(b.isalnum())\n",
+        "print(b.isdecimal())\n",
+        "print(a.isdecimal())\n",
+        "print(d.isspace())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AqS_5VeUon5L",
+        "outputId": "53ce5017-9c5b-47e4-bf19-1ccd046069d9"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"AMIT\"\n",
+        "b = \"Amit\"\n",
+        "c = \"amit\"\n",
+        "d = \"amit18.u\"\n",
+        "\n",
+        "print(a.isupper())\n",
+        "print(b.isupper())\n",
+        "print(b.islower())\n",
+        "print(c.islower())\n",
+        "print(d.islower())\n",
+        "print(b.isalpha())\n",
+        "print(b.isnumeric())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WNPOZxhlpjO8",
+        "outputId": "96568557-b805-42d6-e54b-dedde786d85b"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9NjShPiiqiXE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
