--- a/Day6_0902_Problem_Solving.ipynb
+++ b/Day6_0902_Problem_Solving.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF7CG8F0KbUstscdVVbfEM",
+      "authorship_tag": "ABX9TyN8TDCS2d1CY+mJfWXigoDg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -526,9 +526,132 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a = [\"Rose\", \"Rachel\", \"Monica\", \"Joe\"]\n",
+        "\n",
+        "#write a program to delete 3rd position.\n",
+        "\n",
+        "print(a.pop(3))\n",
+        "print(a)\n",
+        "\n",
+        "#add a new item in 2nd position\n",
+        "print(a.insert(2, \"Amit\"))\n",
+        "\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FKl31ejxRjh3",
+        "outputId": "c55c9455-2ee4-47f0-cace-d95deb7f9cf9"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Joe\n",
+            "['Rose', 'Rachel', 'Monica']\n",
+            "None\n",
+            "['Rose', 'Rachel', 'Amit', 'Monica']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [\"Rose\", \"Rachel\", \"Monica\", \"Joe\"]\n",
+        "\n",
+        "#swap 1st and 4th\n",
+        "\n",
+        "a[0], a[3] = a[3], a[0]\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LPDjJ9T9dAgD",
+        "outputId": "5ce15d0c-16c4-49a4-cb76-78dc9a0cd9de"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Joe', 'Rachel', 'Monica', 'Rose']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = [13, 7, 12, 10]\n",
+        "\n",
+        "sum = 1\n",
+        "for i in b:\n",
+        "  sum = sum * i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "52ZiHpqmeNz3",
+        "outputId": "59b2e1ff-0c22-4a16-97cf-7a65c9a34a1d"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10920\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = [13, 7, 12, 10]\n",
+        "\n",
+        "#largest value\n",
+        "b.sort()\n",
+        "print(b)\n",
+        "print(\"Largest value from the list is \", b[-1])\n",
+        "print(\"smallest value from the list is \", b[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bYWFWvsLfA8m",
+        "outputId": "fd82bb07-503b-4f23-e6af-34f550c1340c"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7, 10, 12, 13]\n",
+            "Largest value from the list is  13\n",
+            "smallest value from the list is  7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "FKl31ejxRjh3"
+        "id": "_H_OUS9KgT1i"
       },
       "execution_count": null,
       "outputs": []
