--- a/Exception_Handling.ipynb
+++ b/Exception_Handling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6QjdRgtrY/enLHmOT8oVI",
+      "authorship_tag": "ABX9TyMoV2xO5zNA0h3HDkJ7VrWo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,12 +62,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Manually\n",
+        "\n",
+        "num = input(\"Enter any number : \")\n",
+        "mul = 0\n",
+        "if num.isdigit():\n",
+        "  for i in range(1, 11):\n",
+        "    mul = int(num) * i\n",
+        "    print(num, \"x\", i, \"=\" , mul)\n",
+        "else:\n",
+        "  print(\"Entered number is not a digit.\")"
+      ],
       "metadata": {
-        "id": "E4gUM5F4Ider"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E4gUM5F4Ider",
+        "outputId": "eeca2a20-9924-4b3b-c2c8-94480e8fc03e"
       },
-      "execution_count": 18,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter any number : amit18\n",
+            "Entered number is not a digit.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
