Updated more examples

--- a/Enumerate_Function.ipynb
+++ b/Enumerate_Function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN57NSDQERHDiHEgIuL/dTb",
+      "authorship_tag": "ABX9TyP16FBX6VLHkGDP2v3z6CKn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
       "cell_type": "code",
       "source": [
         "fruits = [\"Apple\", \"Mango\", \"Banana\", \"Grapes\"]\n",
-        "for index, fruits in enumerate(fruits):\n",
+        "for index, fruits in enumerate(fruits, start = 1):\n",
         "  print(fruits, \"at index\", index)"
       ],
       "metadata": {
@@ -86,18 +86,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bGkTZh1Xg6tG",
-        "outputId": "52ec7c16-da91-4089-ae91-a2a1c2ebfb9e"
+        "outputId": "25f0f961-c56a-4f48-d977-2c2b16fe1c96"
       },
-      "execution_count": 2,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Apple at index 0\n",
-            "Mango at index 1\n",
-            "Banana at index 2\n",
-            "Grapes at index 3\n"
+            "Apple at index 1\n",
+            "Mango at index 2\n",
+            "Banana at index 3\n",
+            "Grapes at index 4\n"
           ]
         }
       ]
