--- a/File_IO.ipynb
+++ b/File_IO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb9dHFgHRSYGG0QldDtNoR",
+      "authorship_tag": "ABX9TyPMIO7iZAoLA3DpcOisxHTb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,9 +122,80 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Readline() - read the file line by line.\n",
+        "\n",
+        "file = open(\"newfile.txt\", 'r')\n",
+        "i = 0\n",
+        "while True:\n",
+        "  i = i + 1\n",
+        "  line = file.readline()\n",
+        "  if not line:\n",
+        "    break\n",
+        "  m1 = line.split(\",\")[0]\n",
+        "  m2 = line.split(\",\")[1]\n",
+        "  m3 = line.split(\",\")[2]\n",
+        "\n",
+        "  print(f\"Marks of student{i} in maths is {m1}\")\n",
+        "  print(f\"Marks of student{i} in English is {m2}\")\n",
+        "  print(f\"Marks of student{i} in Hindi is {m3}\")\n",
+        "\n",
+        "  print(line)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YcUKVZCAXXOr",
+        "outputId": "883aef47-d275-4b23-cd11-2e7be6e78bef"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Marks of student1 in maths is 55\n",
+            "Marks of student1 in English is  56\n",
+            "Marks of student1 in Hindi is  57\n",
+            "\n",
+            "55, 56, 57\n",
+            "\n",
+            "Marks of student2 in maths is 65\n",
+            "Marks of student2 in English is  66\n",
+            "Marks of student2 in Hindi is  67\n",
+            "\n",
+            "65, 66, 67\n",
+            "\n",
+            "Marks of student3 in maths is 77\n",
+            "Marks of student3 in English is  78\n",
+            "Marks of student3 in Hindi is  79\n",
+            "77, 78, 79\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a file.\n",
+        "\n",
+        "f = open(\"myfile1.txt\", 'w')\n",
+        "lines = ['line1 \\n', 'line2 \\n', 'line3 \\n']\n",
+        "f.writelines(lines)\n",
+        "f.close()"
+      ],
+      "metadata": {
+        "id": "zyFqe54vdcP2"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YcUKVZCAXXOr"
+        "id": "pk-aJmbdgr9-"
       },
       "execution_count": null,
       "outputs": []
