added some examples - 23Feb2024

--- a/Lambda_Function.ipynb
+++ b/Lambda_Function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgZ8hc7YsLgbMTop8ubxQX",
+      "authorship_tag": "ABX9TyObmgwDPOW5Ck9vehYVhT3Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AmitUdugade/PythonBasicsWorkspace/blob/main/Lambda_Function.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AmitUdugade/PythonWorkspace/blob/main/Lambda_Function.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,7 +46,7 @@
         }
       ],
       "source": [
-        "#Lambda Function - is small anonymous function without a name.\n",
+        "#Lambda Function - is small anonymous function without a name.(nameless function)\n",
         "#                - It is defined using the lambda keyword.\n",
         "\n",
         "'''\n",
@@ -73,7 +73,7 @@
         "id": "1fHh0588Fr0M",
         "outputId": "029d0cb2-9db5-48c6-de7f-7e838c7dd838"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "id": "Em6987qBGxfz",
         "outputId": "16f0900f-439b-4e70-b20e-e4f0d0cc20a9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "id": "IM-NqLAsG_cN",
         "outputId": "ed5a182f-95a3-4acb-a94a-8e31b647cbab"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,9 +137,114 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "convert = lambda name: name.upper()\n",
+        "\n",
+        "print(convert('virat Kohli'))"
+      ],
+      "metadata": {
+        "id": "ZR0L8K21IDRT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "53aa5527-3528-4054-a4db-385f5bdae3db"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "VIRAT KOHLI\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "convert = lambda name: name.swapcase()\n",
+        "\n",
+        "print(convert('viRat Kohli'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cTBFRcmTi1p2",
+        "outputId": "e3318b2f-fa12-4038-ae76-2652761fbc70"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "VIrAT kOHLI\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dir(str)"
+      ],
+      "metadata": {
+        "id": "ywBiIX9ojFEh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(x, y):\n",
+        "  return x + y, x -y    #can give multiple expressions.\n",
+        "\n",
+        "print(add(10, 20))\n",
+        "\n",
+        "ad = lambda x, y : x + y, x - y   #you'll get an error as you can't give multiple expressions. lambda accepts only one expression.\n",
+        "print(ad(50, 60))"
+      ],
+      "metadata": {
+        "id": "dJvUMbbtjRV8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#solution to above error\n",
+        "\n",
+        "ad = lambda x, y : (x + y, x - y)  #give brackets if you have multiple expressions.\n",
+        "\n",
+        "print(ad(50, 60))"
+      ],
+      "metadata": {
+        "id": "5TPXesG9k-y1",
+        "outputId": "3699426b-12ec-4e9e-b28b-e0c537d8535a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(110, -10)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZR0L8K21IDRT"
+        "id": "ZyhUFHhPl6zT"
       },
       "execution_count": null,
       "outputs": []
