--- a/Lambda_Function.ipynb
+++ b/Lambda_Function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObmgwDPOW5Ck9vehYVhT3Q",
+      "authorship_tag": "ABX9TyOd+G6QvMhLzods7RRauW+B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,11 +223,11 @@
         "print(ad(50, 60))"
       ],
       "metadata": {
-        "id": "5TPXesG9k-y1",
-        "outputId": "3699426b-12ec-4e9e-b28b-e0c537d8535a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5TPXesG9k-y1",
+        "outputId": "3699426b-12ec-4e9e-b28b-e0c537d8535a"
       },
       "execution_count": 12,
       "outputs": [
@@ -242,9 +242,60 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#if else using lambda function.\n",
+        "op = lambda x : x**2 if x>0 else x   #expression is called as ternary operator\n",
+        "print(op(10))\n",
+        "print(op(-10))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZyhUFHhPl6zT",
+        "outputId": "bd5a0b58-cb5e-4ce3-80e5-1188da100a80"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "-10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check = lambda amt : 'vada pav' if amt<20 else 'pizza'\n",
+        "print(check(100))"
+      ],
+      "metadata": {
+        "id": "vaHOnGykoLxg",
+        "outputId": "51d80ef3-bd78-428e-8d64-8e10481838c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pizza\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZyhUFHhPl6zT"
+        "id": "fOT75HGTqhqA"
       },
       "execution_count": null,
       "outputs": []
